openssl (0.9.8a-6) unstable; urgency=low

  * Remove empty postinst/preinst/prerm scripts.  There is no need
    to have empty ones, debhelper will add them when needed.

 -- Kurt Roeckx <kurt@roeckx.be>  Mon, 26 Dec 2005 01:14:14 +0100

openssl (0.9.8a-5) unstable; urgency=low

  * Stop ssh from crashing randomly on sparc (Closes: #335912)
    Patch from upstream cvs.

 -- Kurt Roeckx <kurt@roeckx.be>  Tue, 13 Dec 2005 21:37:42 +0100

openssl (0.9.8a-4) unstable; urgency=low

  * Call dh_makeshlibs with the proper version instead of putting
    it in shlibs.local, which doesn't seem to do anything.  0.9.8a-1
    added symbol versioning, so it should have bumped the shlibs.
    (Closes: #338284)
  * The openssl package had a duplicate dependency on libssl0.9.8,
    only require the version as required by the shlibs.
  * Make libssl-dev depend on zlib1g-dev, since it's now required for
    static linking. (Closes: #338313)
  * Generate .pc files that make use of Libs.private, so things only
    link to the libraries they should when linking shared.
  * Use -m64 instead of -bpowerpc64-linux on ppc64. (Closes: #335486)
  * Make powerpc and ppc64 use the assembler version for bn.  ppc64
    had the location in the string wrong, powerpc had it missing.
  * Add includes for stddef to get size_t in md2.h, md4.h, md5.h,
    ripemd.h and sha.h.  (Closes: #333101)
  * Run make test for each of the versions we build, make it 
    not fail the build process if an error is found.
  * Add build dependency on bc for the regression tests.

 -- Kurt Roeckx <kurt@roeckx.be>  Wed, 13 Nov 2005 16:01:05 +0100

openssl (0.9.8a-3) unstable; urgency=high

  * Link to libz instead of dynamicly loading it.  It gets loaded
    at the moment the library is initialised, so there is no point
    in not linking to it.  It's now failing in some cases since
    it's not opened by it's soname, but by the symlink to it.
    This should hopefully solve most of the bugs people have reported